@@ -1,5 +1,7 @@
 package will.jvm.test;
 
+import net.sf.cglib.proxy.Enhancer;
+import net.sf.cglib.proxy.MethodInterceptor;
 import will.jvm.model.User;
 
 import java.util.ArrayList;
@@ -9,10 +11,14 @@ import java.util.List;
  *
  */
 public class HeapTest {
+
     public static void main(String[] args) throws InterruptedException {
 //        testEden();
 //        testBigObject();
-        testMaxTenuringThreshold();
+//        testMaxTenuringThreshold();
+//        testPermVariable();
+//        testStaticVariable();
+        testMetaSpace();
     }
 
 
@@ -51,6 +57,54 @@ public class HeapTest {
             if (i / 10000 == 0) {
                 Thread.sleep(5000);
             }
+        }
+    }
+
+    /**
+     * java7之后，常量移到堆内存中
+     *
+     * @throws InterruptedException
+     */
+    public static void testPermVariable() throws InterruptedException {
+        String s = "abc";
+        int i = 0;
+        for (; ; i++) {
+            s = s + s;
+            System.out.println(s.intern());
+            if (i / 10000 == 0) {
+                Thread.sleep(5000);
+            }
+        }
+    }
+
+    static String va = "abc";
+
+    public static void testStaticVariable() throws InterruptedException {
+        int i = 0;
+        for (; ; i++) {
+            va = va + va;
+            System.out.println(va);
+            Thread.sleep(3000);
+        }
+    }
+
+    /**
+     * -XX:MetaspaceSize=8m -XX:MaxMetaspaceSize=128m -XX:+PrintGCDetails
+     */
+    public static void testMetaSpace() {
+        int i = 0;
+        try {
+            for (; ; ) {
+                i++;
+                Enhancer enhancer = new Enhancer();
+                enhancer.setSuperclass(User.class);
+                enhancer.setUseCache(false);
+                enhancer.setCallback((MethodInterceptor) (obj, method, args, proxy) -> proxy.invokeSuper(obj, args));
+                enhancer.create();
+            }
+        } catch (Exception e) {
+            System.out.println("第" + i + "次时发生异常");
+            e.printStackTrace();
         }
     }
 
